--- a/css/index.css
+++ b/css/index.css
@@ -279,7 +279,7 @@ html,body,.swiper-container {
 	position: relative;
 	/*margin-top: 20%;*/
 	width: 70%;
-	margin: 30% auto 0;
+	margin: 25% auto 0;
 }
 #s6-circle {
 	position: absolute;
@@ -316,7 +316,7 @@ html,body,.swiper-container {
 #s6-btn-wrapper {
 	width: 100%;
 	position: absolute;
-	top: 67%;
+	top: 60%;
 	left: 0;
 }
 .s6-btn img:last-child {
@@ -326,11 +326,14 @@ html,body,.swiper-container {
 	left: 20%;
 }
 #s6-tech {
-	left: 20%;
+	left: 17%;
 }
 #s6-design {
-	left: 44%;
+	left: 42.5%;
 }
 #s6-planning {
 	left: 68%;
+}
+#s6-go {
+	top: 73%;
 }
