--- a/css/index.css
+++ b/css/index.css
@@ -1,8 +1,3 @@
-
-
-
-
-
 body {
 	font-family: Helvetica, Tahoma, Arial, STXihei, "华文细黑", "Microsoft YaHei", "微软雅黑", SimSun, "宋体", Heiti, "黑体", sans-serif;
 	-webkit-tap-highlight-color:rgba(0,0,0,0);
@@ -22,6 +17,30 @@ html,body,.swiper-container {
 .swiper-slide {
 	overflow: hidden;
 	position: relative;
+}
+
+/*sub*/
+.logo-big {
+	position: absolute;
+	display: block;
+	width: 13%;
+	bottom: 7%;
+	left: 43.5%;
+}
+.sub {
+	width: 80%;
+	position: absolute;
+	
+	left: 8%;
+	transform: rotateX(45deg);
+	/*height: 1em;*/
+	overflow: hidden;
+}
+.sub>img {
+	width: 100%;
+}
+#subtitles {
+	perspective: 500px;
 }
 
 
@@ -628,9 +647,14 @@ animation-play-state:paused;
   0% {
     transform:scale(1,1);
   }
-
-
-
+  100% {
+    transform:scale(5,5);
+  }
+}
+@-webkit-keyframes scaleOut {
+  0% {
+    transform:scale(1,1);
+  }
   100% {
     transform:scale(5,5);
   }
