--- a/css/index.css
+++ b/css/index.css
@@ -467,6 +467,68 @@ html,body,.swiper-container {
  	-webkit-animation-duration: 0.7s;
  	animation-duration: 0.7s;
 }
+.info-house {
+	width: 100%;
+	position: absolute;
+	left: 0;
+	bottom: 30%;
+	opacity: 0;
+	-webkit-animation-fill-mode: both;
+ 	animation-fill-mode: both;
+ 	-webkit-animation-duration: 0.7s;
+ 	animation-duration: 0.7s;
+}
+.info-phone {
+	width: 33%;
+	position: absolute;
+	left: 18%;
+	bottom: 14%;
+	opacity: 0;
+}
+.info-phone-ani {
+	-webkit-animation: fadeIn 0.7s 1.8s;
+	animation: fadeIn 0.7s 1.8s;
+	-webkit-animation-fill-mode: both;
+ 	animation-fill-mode: both;
+}
+.info-signal {
+	width: 33%;
+	position: absolute;
+	right: 12%;
+	bottom: 14%;
+	opacity: 0;
+}
+.info-signal-ani {
+	-webkit-animation: fadeIn 0.7s 1.2s;
+	animation: fadeIn 0.7s 1.2s;
+	-webkit-animation-fill-mode: both;
+ 	animation-fill-mode: both;
+}
+.info-robot {
+	width: 18%;
+	position: absolute;
+	right: 20%;
+	bottom: 70%;
+	opacity: 0;
+}
+.info-robot-ani {
+	-webkit-animation: fadeIn 0.7s 1.8s,ellipse 4s 1.7s infinite;
+	animation: fadeIn 0.7s 1.8s,ellipse 4s 1.7s infinite;
+	-webkit-animation-fill-mode: both;
+ 	animation-fill-mode: both;
+}
+@keyframes ellipse {
+	0%,100% {right: 20%;bottom: 66%;}
+	25% {right: 30%;bottom: 70%;}
+	50% {right: 40%;bottom: 67%;}
+	75% {right: 30%;bottom: 65%;}
+}
+@-webkit-keyframes ellipse {
+	0%,100% {right: 20%;bottom: 66%;}
+	25% {right: 30%;bottom: 70%;}
+	50% {right: 40%;bottom: 67%;}
+	75% {right: 30%;bottom: 65%;}
+}
 .elec-car {
 	width: 38%;
 	position: absolute;
@@ -699,6 +761,21 @@ html,body,.swiper-container {
 	top: 19%;
 	opacity: 0;
 }
+.info-cloud1 {
+	position: absolute;
+	width: 14%;
+	left: 15%;
+	top: 15%;
+	opacity: 0;
+
+}
+.info-cloud2 {
+	position: absolute;
+	width: 21%;
+	left: 48%;
+	top: 7%;
+	opacity: 0;
+}
 .steam-cloud1-ani {
 	-webkit-animation: fadeIn 0.7s 1.2s,translateMove 5.9s 1.9s;
 	animation: fadeIn 0.7s 1.2s,translateMove 5.9s 1.9s;
@@ -726,6 +803,18 @@ html,body,.swiper-container {
 .elec-cloud3-ani {
 	-webkit-animation: fadeIn 0.7s 0.6s,translateMove 20s 1.2s;
 	animation: fadeIn 0.7s 0.6s,translateMove 20s 1.2s;
+	-webkit-animation-fill-mode: both;
+ 	animation-fill-mode: both;
+}
+.info-cloud1-ani {
+	-webkit-animation: fadeIn 0.7s 0.6s,translateMove 15.9s 1.2s;
+	animation: fadeIn 0.7s 0.6s,translateMove 15.9s 1.2s;
+	-webkit-animation-fill-mode: both;
+ 	animation-fill-mode: both;
+}
+.info-cloud2-ani {
+	-webkit-animation: fadeIn 0.7s 0.6s,translateMove 25.9s 1.2s;
+	animation: fadeIn 0.7s 0.6s,translateMove 25.9s 1.2s;
 	-webkit-animation-fill-mode: both;
  	animation-fill-mode: both;
 }
