--- a/css/index.css
+++ b/css/index.css
@@ -1,10 +1,11 @@
+/*base*/
 body {
 	font-family: Helvetica, Tahoma, Arial, STXihei, "华文细黑", "Microsoft YaHei", "微软雅黑", SimSun, "宋体", Heiti, "黑体", sans-serif;
 	-webkit-tap-highlight-color:rgba(0,0,0,0);
 	-webkit-user-select: none;
 	-webkit-text-size-adjust: none;
 	background-color: #000;
-	color: #fff;
+	color: #eee;
 }
 a,img {
 	-webkit-touch-callout:none;
@@ -13,13 +14,12 @@ html,body,.swiper-container {
 	width: 100%;
 	height: 100%;
 }
-
 .swiper-slide {
 	overflow: hidden;
 	position: relative;
 }
 
-/*sub*/
+/*字幕页*/
 .logo-big {
 	position: absolute;
 	display: block;
@@ -30,22 +30,66 @@ html,body,.swiper-container {
 .sub {
 	width: 80%;
 	position: absolute;
-	
+	height: 0;
 	left: 8%;
+	-webkit-transform: rotateX(45deg);
 	transform: rotateX(45deg);
-	/*height: 1em;*/
 	overflow: hidden;
 }
 .sub>img {
 	width: 100%;
 }
 #subtitles {
-	perspective: 500px;
+	perspective: 500;
+	-webkit-perspective: 500;
+}
+.skipSub {
+	display: block;
+	position: absolute;
+	top: 7%;
+	right: 10%;
+	color: #eee;
+	-webkit-animation: dotFade 1.8s infinite;
+	animation: dotFade 1.8s infinite;
+}
+.skipSub:visited {
+	color: #eee;
 }
 
+/*.skipSub .skip1 {
+	-webkit-animation: dotFade 1.8s infinite;
+	animation: dotFade 1.8s infinite;
+}
+.skipSub .skip2 {
+	-webkit-animation: dotFade 1.8s 0.1s infinite;
+	animation: dotFade 1.8s 0.1s infinite;
+}
+.skipSub .skip3 {
+	-webkit-animation: dotFade 1.8s 0.2s infinite;
+	animation: dotFade 1.8s 0.2s infinite;
+}
+.skipSub .skip4 {
+	-webkit-animation: dotFade 1.8s 0.3s infinite;
+	animation: dotFade 1.8s 0.3s infinite;
+}
+.skipSub .skip5 {
+	-webkit-animation: dotFade 1.8s 0.4s infinite;
+	animation: dotFade 1.8s 0.4s infinite;
+}
+.skipSub .skip6 {
+	-webkit-animation: dotFade 1.8s 0.5s infinite;
+	animation: dotFade 1.8s 0.5s infinite;
+}
+.skipSub .skip7 {
+	-webkit-animation: dotFade 1.8s 0.6s infinite;
+	animation: dotFade 1.8s 0.6s infinite;
+}
+.skipSub>span {
+	-webkit-animation-fill-mode: both;
+	animation-fill-mode: both;
+}*/
 
 /*slide1*/
-
 #main-swiper #slide1 {
 	background: #000 url(../images/start.jpg) 0 0 no-repeat;
 	-webkit-background-size: cover;
@@ -82,12 +126,12 @@ html,body,.swiper-container {
 	left: 10%;
 }
 @-webkit-keyframes rotate1{
-	0%{ transform:rotate(0deg); }
-	100%{ transform:rotate(-360deg); }
+	0%{ transform:rotate(0deg);-webkit-transform:rotate(0deg); }
+	100%{ transform:rotate(-360deg);-webkit-transform:rotate(-360deg); }
 }
 @keyframes rotate1 {	
-	0%{ transform:rotate(0deg); }
-	100%{ transform:rotate(-360deg); }
+	0%{ transform:rotate(0deg);-webkit-transform:rotate(0deg); }
+	100%{ transform:rotate(-360deg);-webkit-transform:rotate(-360deg); }
 }
 #s1-earth {
 	display: block;
@@ -123,14 +167,11 @@ html,body,.swiper-container {
 
 
 /*slide2*/
-
-
 #main-swiper>div>.swiper-slide{
 	background: #000 url(../images/background.jpg) 0 0 no-repeat;
 	-webkit-background-size: cover;
 	background-size: cover;
 }
-
 
 #s2-title {
 	position: absolute;
@@ -140,23 +181,12 @@ html,body,.swiper-container {
 	opacity: 0;
 
 }
-/*#s2-robot {
-	position: absolute;
-	left: 0;
-	width: 100%;
-}
-#s2-rbline {
-	position: absolute;
-	left: 0;
-	width: 100%;
-}*/
 #s2-btn {
 	position: absolute;
 	display: block;
 	top: 30%;
 	width: 20%;
 	left: 40%;
-	/*height: 15%;*/
 	opacity: 0;
 }
 #s2-robot {
@@ -164,11 +194,14 @@ html,body,.swiper-container {
 }
 #s2-hand {
 	position: absolute;
-	bottom: -60%;
+	bottom: -45px;
 	right: 0;
-	width: 30%;
-	/*opacity: 0;*/
+	width: 24px;
 	display: none;
+	overflow: visible;
+}
+#s2-hand img {
+	display: block;
 }
 #s2-finger {
 	width: 100%;
@@ -178,14 +211,14 @@ html,body,.swiper-container {
 	width: 50%;
 	top: -12%;
 	left: 15.5%;
-	－webkit-animation: btnFadeInOut 1s infinite;
+	-webkit-animation: btnFadeInOut 1s infinite;
 	animation: btnFadeInOut 1s infinite;
 }
 #s2-bc {
 	position: absolute;
 	width: 75%;
-	top: -20%;
-	left: 6%;
+	top: -23%;
+	left: 3%;
 	-webkit-animation: btnFadeInOut 1s 0.5s infinite;
 	animation: btnFadeInOut 1s 0.5s infinite;
 }
@@ -253,9 +286,11 @@ html,body,.swiper-container {
  	animation-fill-mode: both;
 }
 @keyframes typing { from { width: 0; } }
+@-webkit-keyframes typing { from { width: 0; } }
 @keyframes blink-caret { 50% { border-color: #fff; } }
+@-webkit-keyframes blink-caret { 50% { border-color: #fff; } }
 @-webkit-keyframes btnFadeInOut {
-	50% {opacity: 1;}
+	50% {opacity: 0.5;}
 }
 @keyframes btnFadeInOut {
 	50% {opacity: 0.5;}
@@ -333,7 +368,7 @@ html,body,.swiper-container {
 	opacity: 0;
 }
 .s3-para1-ani {
-	@-webkit-animation: typing .4s steps(2, end) 1.4s,
+	-webkit-animation: typing .4s steps(2, end) 1.4s,
  	blink-caret .3s step-end 1.4s 2  alternate;
 	animation: typing .4s steps(2, end) 1.4s,
  	blink-caret .3s step-end 1.4s 2  alternate;
@@ -410,13 +445,7 @@ html,body,.swiper-container {
 	0%{-webkit-transform: rotate(-220deg);transform: rotate(-220deg);}
 	100%{-webkit-transform: rotate(-340deg);transform: rotate(-340deg);}
 }
-/*#ani-1 {
-	position: absolute;
-	left: 50%;
-	-webkit-transform: translateX(-50%);
-	transform: translateX(-50%);
-	width: 58%;
-}*/
+
 #ani-main {
 	position: relative;
 }
@@ -570,8 +599,49 @@ html,body,.swiper-container {
   }
 
   100% {
-    -webkit-transform: none;
-    transform: none;
+/*    -webkit-transform: none;
+    transform: none;*/
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes bounceInDown {
+  0%, 60%, 75%, 90%, 100% {
+    -webkit-transition-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
+    transition-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
+  }
+
+  0% {
+    opacity: 0;
+    -webkit-transform: translate3d(0, -3000px, 0);
+    transform: translate3d(0, -3000px, 0);
+  }
+
+  60% {
+    opacity: 1;
+    -webkit-transform: translate3d(0, 25px, 0);
+    transform: translate3d(0, 25px, 0);
+  }
+
+  75% {
+    -webkit-transform: translate3d(0, -10px, 0);
+    transform: translate3d(0, -10px, 0);
+    opacity: 1;
+  }
+
+  90% {
+    -webkit-transform: translate3d(0, 5px, 0);
+    transform: translate3d(0, 5px, 0);
+    opacity: 1;
+  }
+
+  100% {
+/*    -webkit-transform: none;
+    transform: none;*/
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
     opacity: 1;
   }
 }
@@ -614,6 +684,40 @@ html,body,.swiper-container {
     opacity: 1;
   }
 }
+@-webkit-keyframes bounceInRight {
+  0%, 60%, 75%, 90%, 100% {
+    -webkit-transition-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
+    transition-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
+  }
+
+  0% {
+    opacity: 0;
+    -webkit-transform: translate3d(3000px, 0, 0);
+    transform: translate3d(3000px, 0, 0);
+  }
+
+  60% {
+    opacity: 1;
+    -webkit-transform: translate3d(-25px, 0, 0);
+    transform: translate3d(-25px, 0, 0);
+  }
+
+  75% {
+    -webkit-transform: translate3d(10px, 0, 0);
+    transform: translate3d(10px, 0, 0);
+  }
+
+  90% {
+    -webkit-transform: translate3d(-5px, 0, 0);
+    transform: translate3d(-5px, 0, 0);
+  }
+
+  100% {
+    -webkit-transform: none;
+    transform: none;
+    opacity: 1;
+  }
+}
 
 .bounceInRight {
   -webkit-animation-name: bounceInRight;
@@ -621,6 +725,40 @@ html,body,.swiper-container {
 }
 
 @-webkit-keyframes bounceInUp {
+  0%, 60%, 75%, 90%, 100% {
+    -webkit-transition-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
+    transition-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
+  }
+
+  0% {
+    opacity: 0;
+    -webkit-transform: translate3d(0, 3000px, 0);
+    transform: translate3d(0, 3000px, 0);
+  }
+
+  60% {
+    opacity: 1;
+    -webkit-transform: translate3d(0, -20px, 0);
+    transform: translate3d(0, -20px, 0);
+  }
+
+  75% {
+    -webkit-transform: translate3d(0, 10px, 0);
+    transform: translate3d(0, 10px, 0);
+  }
+
+  90% {
+    -webkit-transform: translate3d(0, -5px, 0);
+    transform: translate3d(0, -5px, 0);
+  }
+
+  100% {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+    opacity: 1;
+  }
+}
+@keyframes bounceInUp {
   0%, 60%, 75%, 90%, 100% {
     -webkit-transition-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
     transition-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
@@ -845,7 +983,7 @@ html,body,.swiper-container {
 	opacity: 0;
 }
 .s4-para1-ani {
-	@-webkit-animation: typing 1.6s steps(8, end) 1.4s,
+	-webkit-animation: typing 1.6s steps(8, end) 1.4s,
  	blink-caret .3s step-end 1.4s 5  alternate;
 	animation: typing 1.6s steps(8, end) 1.4s,
  	blink-caret .3s step-end 1.4s 5  alternate;
@@ -893,14 +1031,13 @@ html,body,.swiper-container {
 	position: absolute;
 	left: 0;
 	width: 100%;
-	top: 35%;
+	top: 42%;
 	display: none;
 }
 #s4-lr>img {
 	width: 100%;
 }
 #slide4 .loading-mask {
-	/*width: 37.5%;*/
 	width: 0;
 	height: 5%;
 	position: absolute;
@@ -1085,7 +1222,7 @@ html,body,.swiper-container {
 	opacity: 0;
 }
 .s5-para1-ani {
-	@-webkit-animation: typing .4s steps(2, end) 3.3s,
+	-webkit-animation: typing .4s steps(2, end) 3.3s,
  	blink-caret .3s step-end 3.3s 2  alternate;
 	animation: typing .4s steps(2, end) 3.3s,
  	blink-caret .3s step-end 3.3s 2  alternate;
@@ -1228,6 +1365,7 @@ html,body,.swiper-container {
 	top: 70%;
 	left: 0;
 	opacity: 0;
+	z-index: 10;
 }
 .s6-btn-wrapper-1 {
 	-webkit-animation: fadeIn 0.7s 2.4s;
@@ -1273,6 +1411,7 @@ html,body,.swiper-container {
 }
 #s6-go {
 	top: 75%;
+	display: none;
 }
 .s6-logo-ani {
 	-webkit-animation: fadeInUp 0.7s 0.6s;
@@ -1450,10 +1589,8 @@ html,body,.swiper-container {
 	opacity: 0;
 }
 .s7-para1-ani {
-	@-webkit-animation: typing 0.4s steps(2, end) 1.4s,
- 	blink-caret .3s step-end 1.4s 2  alternate;
-	animation: typing 0.4s steps(2, end) 1.4s,
- 	blink-caret .3s step-end 1.4s 2  alternate;
+	-webkit-animation: typing 0.4s 1.4s steps(2, end),blink-caret .3s step-end 1.4s 2  alternate;
+	animation: typing 0.4s steps(2, end) 1.4s,blink-caret .3s step-end 1.4s 2  alternate;
  	-webkit-animation-fill-mode: both;
  	animation-fill-mode: both;
 }
@@ -1545,16 +1682,20 @@ animation-play-state:paused;
 @keyframes scaleOut {
   0% {
     transform:scale(1,1);
+    -webkit-transform:scale(1,1);
   }
   100% {
     transform:scale(5,5);
+    -webkit-transform:scale(5,5);
   }
 }
 @-webkit-keyframes scaleOut {
   0% {
     transform:scale(1,1);
+    -webkit-transform:scale(1,1);
   }
   100% {
     transform:scale(5,5);
+    -webkit-transform:scale(5,5);
   }
 }
