--- a/css/index.css
+++ b/css/index.css
@@ -31,9 +31,9 @@ html,body,.swiper-container {
 	width: 80%;
 	position: absolute;
 	height: 0;
-	left: 8%;
-	-webkit-transform: rotateX(45deg);
-	transform: rotateX(45deg);
+	left: 10%;
+	-webkit-transform: rotateX(43deg);
+	transform: rotateX(43deg);
 	overflow: hidden;
 }
 .sub>img {
@@ -49,8 +49,8 @@ html,body,.swiper-container {
 	top: 7%;
 	right: 10%;
 	color: #eee;
-	-webkit-animation: dotFade 1.8s infinite;
-	animation: dotFade 1.8s infinite;
+/*	-webkit-animation: dotFade 1.8s infinite;
+	animation: dotFade 1.8s infinite;*/
 }
 .skipSub:visited {
 	color: #eee;
@@ -83,11 +83,13 @@ html,body,.swiper-container {
 .skipSub .skip7 {
 	-webkit-animation: dotFade 1.8s 0.6s infinite;
 	animation: dotFade 1.8s 0.6s infinite;
-}
-.skipSub>span {
+}*/
+.span-ani {
+	-webkit-animation: dotFade 1.8s infinite;
+	animation: dotFade 1.8s infinite;
 	-webkit-animation-fill-mode: both;
 	animation-fill-mode: both;
-}*/
+}
 
 /*slide1*/
 #main-swiper #slide1 {
@@ -179,12 +181,14 @@ html,body,.swiper-container {
 	top: 20px;
 	left: 8%;
 	opacity: 0;
-
+	-webkit-animation-duration: 1s;
+	animation-duration: 1s;
 }
 #s2-btn {
 	position: absolute;
 	display: block;
-	top: 30%;
+	/*top: 30%*/
+	top: 28%;
 	width: 20%;
 	left: 40%;
 	opacity: 0;
@@ -197,8 +201,11 @@ html,body,.swiper-container {
 	bottom: -45px;
 	right: 0;
 	width: 24px;
-	display: none;
+	/*display: none;*/
 	overflow: visible;
+	opacity: 0;
+	-webkit-animation-duration: 1.8s;
+	animation-duration: 1.8s;
 }
 #s2-hand img {
 	display: block;
@@ -247,9 +254,10 @@ html,body,.swiper-container {
 	left: 0;
 	width: 100%;
 	top: 54%;
+	top: 52%;
 }
 
-#s2-word1 p:first-child {
+.s2-para1 {
 	font-size: 22px; 
  	border-right: .1em solid;
  	width: 2em;
@@ -260,28 +268,46 @@ html,body,.swiper-container {
 	opacity: 0;
 }
 .s2-para1-ani {
-	-webkit-animation: typing .4s steps(2, end) 5.2s,
- 	blink-caret .3s step-end 5.2s 2  alternate;
-	animation: typing .4s steps(2, end) 5.2s,
- 	blink-caret .3s step-end 5.2s 2  alternate;
+	-webkit-animation: typing .4s steps(2, end) 4.8s,
+ 	blink-caret .3s step-end 4.8s 2  alternate;
+	animation: typing .4s steps(2, end) 4.8s,
+ 	blink-caret .3s step-end 4.8s 2  alternate;
  	-webkit-animation-fill-mode: both;
  	animation-fill-mode: both;
 }
-#s2-word1 p:last-child {
+.s2-para-a3 {
 	font-size: 22px; 
  	border-right: .1em solid;
- 	width: 7em; /* fallback */
+ 	width: 7em;
+ 	white-space: nowrap;
+ 	overflow: hidden;
+ 	margin: 0 auto 6px;
+ 	border-color:transparent;
+	opacity: 0;
+}
+.s2-para2 {
+	font-size: 22px; 
+ 	border-right: .1em solid;
+ 	width: 7em; 
  	white-space: nowrap;
  	overflow: hidden;
  	margin: 0 auto;
  	border-color:transparent;
  	opacity: 0;
 }
+.s2-para-a3-ani {
+	-webkit-animation: typing 1.4s 5.4s steps(7, end),
+ 	blink-caret .3s step-end 5.4s 5 alternate;
+	animation: typing 1.4s 5.4s steps(7, end),
+ 	blink-caret .3s step-end 5.4s 5 alternate;
+ 	-webkit-animation-fill-mode: both;
+ 	animation-fill-mode: both;
+}
 .s2-para2-ani {
-	-webkit-animation: typing 1.4s 5.8s steps(7, end),
- 	blink-caret .3s step-end 5.8s infinite alternate;
-	animation: typing 1.4s 5.8s steps(7, end),
- 	blink-caret .3s step-end 5.8s infinite alternate;
+	-webkit-animation: typing 1.4s 7s steps(7, end),
+ 	blink-caret .3s step-end 7s infinite alternate;
+	animation: typing 1.4s 7s steps(7, end),
+ 	blink-caret .3s step-end 7s infinite alternate;
  	-webkit-animation-fill-mode: both;
  	animation-fill-mode: both;
 }
@@ -297,10 +323,11 @@ html,body,.swiper-container {
 }
 #s2-para {
 	position: absolute;
-	top: 71%;
+	/*top: 71%;*/
+	top: 73%;
 	opacity: 0;
-	-webkit-animation-duration: 0.7s;
-	animation-duration: 0.7s;
+	-webkit-animation-duration: 0.88s;
+	animation-duration: 0.88s;
 }
 #now-date {
 	text-align: center;
@@ -325,14 +352,14 @@ html,body,.swiper-container {
 
 /*slide3*/
 
-#s3-title,#s7-title {
+#s3-title,#s7-title,#s3plus-title {
 	position: absolute;
 	width: 25%;
 	top: 20px;
 	left: 8%;
 	opacity: 0;
 }
-#s3-word1,#s7-word {
+#s3-word1,#s7-word,#s3plus-word1 {
 	position: absolute;
 	left: 0;
 	width: 100%;
@@ -368,17 +395,17 @@ html,body,.swiper-container {
 	opacity: 0;
 }
 .s3-para1-ani {
-	-webkit-animation: typing .4s steps(2, end) 1.4s,
- 	blink-caret .3s step-end 1.4s 2  alternate;
-	animation: typing .4s steps(2, end) 1.4s,
- 	blink-caret .3s step-end 1.4s 2  alternate;
+	-webkit-animation: typing .4s steps(2, end) 1.1s,
+ 	blink-caret .3s step-end 1.1s 2  alternate;
+	animation: typing .4s steps(2, end) 1.1s,
+ 	blink-caret .3s step-end 1.1s 2  alternate;
  	-webkit-animation-fill-mode: both;
  	animation-fill-mode: both;
 }
 .s3-para2 {
 	font-size: 22px; 
  	border-right: .1em solid;
- 	width: 8em; /* fallback */
+ 	width: 8em; 
  	white-space: nowrap;
  	overflow: hidden;
  	margin: 0 auto;
@@ -386,13 +413,63 @@ html,body,.swiper-container {
  	opacity: 0;
 }
 .s3-para2-ani {
-	-webkit-animation: typing 1.6s 2s steps(8, end),
- 	blink-caret .3s step-end 2s infinite alternate;
-	animation: typing 1.6s 2s steps(8, end),
- 	blink-caret .3s step-end 2s infinite alternate;
+	-webkit-animation: typing 1.6s 1.7s steps(8, end),
+ 	blink-caret .3s step-end 1.7s infinite alternate;
+	animation: typing 1.6s 1.7s steps(8, end),
+ 	blink-caret .3s step-end 1.7s infinite alternate;
  	-webkit-animation-fill-mode: both;
  	animation-fill-mode: both;
 }
+
+
+
+/*slide3plus*/
+
+
+#s3-word1,#s7-word {
+	position: absolute;
+	left: 0;
+	width: 100%;
+	top: 35%;
+}
+.s3plus-para1 {
+	font-size: 22px; 
+ 	border-right: .1em solid;
+ 	width: 8em;
+ 	white-space: nowrap;
+ 	overflow: hidden;
+ 	margin: 0 auto 10px;
+ 	border-color:transparent;
+	opacity: 0;
+}
+.s3plus-para1-ani {
+	-webkit-animation: typing 1.6s steps(8, end) 1.1s,
+ 	blink-caret .3s step-end 1.1s 2  alternate;
+	animation: typing 1.6s steps(8, end) 1.1s,
+ 	blink-caret .3s step-end 1.1s 6  alternate;
+ 	-webkit-animation-fill-mode: both;
+ 	animation-fill-mode: both;
+}
+.s3plus-para2 {
+	font-size: 22px; 
+ 	border-right: .1em solid;
+ 	width: 11em; 
+ 	white-space: nowrap;
+ 	overflow: hidden;
+ 	margin: 0 auto;
+ 	border-color:transparent;
+ 	opacity: 0;
+}
+.s3plus-para2-ani {
+	-webkit-animation: typing 2.2s 2.9s steps(11, end),
+ 	blink-caret .3s step-end 2.9s infinite alternate;
+	animation: typing 2.2s 2.9s steps(11, end),
+ 	blink-caret .3s step-end 2.9s infinite alternate;
+ 	-webkit-animation-fill-mode: both;
+ 	animation-fill-mode: both;
+}
+
+
 
 /*ani*/
 #ani-bg {
@@ -471,7 +548,7 @@ html,body,.swiper-container {
 	position: absolute;
 	left: 0;
 	bottom: 22%;
-	opacity: 0;
+	visibility: hidden;
 	-webkit-animation-fill-mode: both;
  	animation-fill-mode: both;
  	-webkit-animation-duration: 0.7s;
@@ -482,7 +559,7 @@ html,body,.swiper-container {
 	position: absolute;
 	left: 0;
 	bottom: 25%;
-	opacity: 0;
+	visibility: hidden;
 	-webkit-animation-fill-mode: both;
  	animation-fill-mode: both;
  	-webkit-animation-duration: 0.7s;
@@ -983,10 +1060,10 @@ html,body,.swiper-container {
 	opacity: 0;
 }
 .s4-para1-ani {
-	-webkit-animation: typing 1.6s steps(8, end) 1.4s,
- 	blink-caret .3s step-end 1.4s 5  alternate;
-	animation: typing 1.6s steps(8, end) 1.4s,
- 	blink-caret .3s step-end 1.4s 5  alternate;
+	-webkit-animation: typing 1.6s steps(8, end) 1s,
+ 	blink-caret .3s step-end 1s 5  alternate;
+	animation: typing 1.6s steps(8, end) 1s,
+ 	blink-caret .3s step-end 1s 5  alternate;
  	-webkit-animation-fill-mode: both;
  	animation-fill-mode: both;
 }
@@ -1001,10 +1078,10 @@ html,body,.swiper-container {
  	opacity: 0;
 }
 .s4-para2-ani {
-	-webkit-animation: typing 1.6s 3s steps(8, end),
- 	blink-caret .3s step-end 3s 5 alternate;
-	animation: typing 1.6s 3s steps(8, end),
- 	blink-caret .3s step-end 3s 5 alternate;
+	-webkit-animation: typing 1.6s 2.6s steps(8, end),
+ 	blink-caret .3s step-end 2.6s 5 alternate;
+	animation: typing 1.6s 2.6s steps(8, end),
+ 	blink-caret .3s step-end 2.6s 5 alternate;
  	-webkit-animation-fill-mode: both;
  	animation-fill-mode: both;
 }
@@ -1019,10 +1096,10 @@ html,body,.swiper-container {
  	opacity: 0;
 }
 .s4-para3-ani {
-	-webkit-animation: typing 0.8s 4.6s steps(4, end),
- 	blink-caret .3s step-end 4.6s infinite alternate;
-	animation: typing 0.8s 4.6s steps(4, end),
- 	blink-caret .3s step-end 4.6s infinite alternate;
+	-webkit-animation: typing 0.8s 4.2s steps(4, end),
+ 	blink-caret .3s step-end 4.2s infinite alternate;
+	animation: typing 0.8s 4.2s steps(4, end),
+ 	blink-caret .3s step-end 4.2s infinite alternate;
  	-webkit-animation-fill-mode: both;
  	animation-fill-mode: both;
 }
@@ -1214,42 +1291,84 @@ html,body,.swiper-container {
 .s5-para1 {
 	font-size: 22px; 
  	border-right: .1em solid;
- 	width: 2em;
+ 	/*width: 2em;*/
+ 	width: 7em;
  	white-space: nowrap;
  	overflow: hidden;
  	margin: 0 auto 10px;
  	border-color:transparent;
 	opacity: 0;
 }
-.s5-para1-ani {
+/*.s5-para1-ani {
 	-webkit-animation: typing .4s steps(2, end) 3.3s,
  	blink-caret .3s step-end 3.3s 2  alternate;
 	animation: typing .4s steps(2, end) 3.3s,
  	blink-caret .3s step-end 3.3s 2  alternate;
  	-webkit-animation-fill-mode: both;
  	animation-fill-mode: both;
+}*/
+.s5-para1-ani {
+	-webkit-animation: typing 1.4s steps(7, end) 3.3s,
+ 	blink-caret .3s step-end 3.3s 5  alternate;
+	animation: typing 1.4s steps(7, end) 3.3s,
+ 	blink-caret .3s step-end 3.3s 5  alternate;
+ 	-webkit-animation-fill-mode: both;
+ 	animation-fill-mode: both;
 }
 .s5-para2 {
 	font-size: 22px; 
  	border-right: .1em solid;
- 	width: 5em; /* fallback */
+ 	/*width: 5em;*/
+ 	width: 7em; 
+ 	white-space: nowrap;
+ 	overflow: hidden;
+ 	margin: 0 auto 10px; /*去掉*/
+ 	border-color:transparent;
+ 	opacity: 0;
+}
+/*.s5-para2-ani {
+	-webkit-animation: typing 1s 3.9s steps(5, end),
+ 	blink-caret .3s step-end 3.9s infinite alternate;
+	animation: typing 1s 3.9s steps(5, end),
+ 	blink-caret .3s step-end 3.9s infinite alternate;
+ 	-webkit-animation-fill-mode: both;
+ 	animation-fill-mode: both;
+}*/
+.s5-para2-ani {
+	-webkit-animation: typing 1.2s 4.9s steps(6, end),
+ 	blink-caret .3s step-end 4.9s 4 alternate;
+	animation: typing 1.2s 4.9s steps(6, end),
+ 	blink-caret .3s step-end 4.9s 4 alternate;
+ 	-webkit-animation-fill-mode: both;
+ 	animation-fill-mode: both;
+}
+.s5-para-a3 {
+	font-size: 22px; 
+ 	border-right: .1em solid;
+ 	width: 7em; 
  	white-space: nowrap;
  	overflow: hidden;
  	margin: 0 auto;
  	border-color:transparent;
  	opacity: 0;
 }
-.s5-para2-ani {
-	-webkit-animation: typing 1s 3.8s steps(5, end),
- 	blink-caret .3s step-end 3.8s infinite alternate;
-	animation: typing 1s 3.8s steps(5, end),
- 	blink-caret .3s step-end 3.8s infinite alternate;
+.s5-para-a3-ani {
+	-webkit-animation: typing 1.4s 6.3s steps(7, end),
+ 	blink-caret .3s step-end 6.3s infinite alternate;
+	animation: typing 1.4s 6.3s steps(7, end),
+ 	blink-caret .3s step-end 6.3s infinite alternate;
  	-webkit-animation-fill-mode: both;
  	animation-fill-mode: both;
 }
 
-#s5-go {
-	top: 71%;
+
+#s5-yes {
+	top: 72%;
+	left: 24%;
+}
+#s5-no {
+	top: 72%;
+	left: 60%;
 }
 
 
@@ -1530,8 +1649,11 @@ html,body,.swiper-container {
 }
 #tech-word,#design-word,#planning-word {
 	width: 34%;
-	top: 8%;
+	top: 6.5%;
 	left: 33%;
+}
+#design-word {
+	top: 4.5%
 }
 #tech-1 {
 	width: 30%;
@@ -1589,8 +1711,8 @@ html,body,.swiper-container {
 	opacity: 0;
 }
 .s7-para1-ani {
-	-webkit-animation: typing 0.4s 1.4s steps(2, end),blink-caret .3s step-end 1.4s 2  alternate;
-	animation: typing 0.4s steps(2, end) 1.4s,blink-caret .3s step-end 1.4s 2  alternate;
+	-webkit-animation: typing 0.4s 1s steps(2, end),blink-caret .3s step-end 1s 2  alternate;
+	animation: typing 0.4s steps(2, end) 1s,blink-caret .3s step-end 1s 2  alternate;
  	-webkit-animation-fill-mode: both;
  	animation-fill-mode: both;
 }
@@ -1605,10 +1727,10 @@ html,body,.swiper-container {
  	opacity: 0;
 }
 .s7-para2-ani {
-	-webkit-animation: typing 1.2s 2s steps(6, end),
- 	blink-caret .3s step-end 2s 4 alternate;
-	animation: typing 1.2s 2s steps(6, end),
- 	blink-caret .3s step-end 2s 4 alternate;
+	-webkit-animation: typing 1.2s 1.6s steps(6, end),
+ 	blink-caret .3s step-end 1.6s 4 alternate;
+	animation: typing 1.2s 1.6s steps(6, end),
+ 	blink-caret .3s step-end 1.6s 4 alternate;
  	-webkit-animation-fill-mode: both;
  	animation-fill-mode: both;
 }
@@ -1623,10 +1745,10 @@ html,body,.swiper-container {
  	opacity: 0;
 }
 .s7-para3-ani {
-	-webkit-animation: typing 0.8s 3.4s steps(4, end),
- 	blink-caret .3s step-end 3.4s infinite alternate;
-	animation: typing 0.8s 3.4s steps(4, end),
- 	blink-caret .3s step-end 3.4s infinite alternate;
+	-webkit-animation: typing 0.8s 3s steps(4, end),
+ 	blink-caret .3s step-end 3s infinite alternate;
+	animation: typing 0.8s 3s steps(4, end),
+ 	blink-caret .3s step-end 3s infinite alternate;
  	-webkit-animation-fill-mode: both;
  	animation-fill-mode: both;
 }
@@ -1676,8 +1798,8 @@ animation-play-state:paused;
   animation-duration: 3s;
 }
 .ani-earth {
-	-webkit-animation: scaleOut 15s ease-in-out;
-	animation: scaleOut 15s ease-in-out;
+	-webkit-animation: scaleOut 10s ease-in-out;
+	animation: scaleOut 10s ease-in-out;
 }
 @keyframes scaleOut {
   0% {
